# data-engineering-for-gies

./: .gitignore  1_boundary.py  2_landcover.py  3_integrate.py  README.md  config.py  config.toml  pyproject.toml
data/output/: ghana_adm2_data.csv
data/treatment/: create_treatment.py  ghana_adm2_treatment.csv
examples/: generator.py  parallelization.py
